Text Formatter/tests/error/badparam4.tx
\parskip{-1}Tries to have negative paragraph skips
